# my_renderer

./: .gitignore  README.md  bunny.simple  main.cpp  my_graphic.h  my_renderer.cpp  my_renderer.h  output.simple
my_obj_loader/: my_obj_loader.cpp  my_obj_loader.h
my_simple_model/: my_obj_loader.h  my_simple_model_loader.h  ply2simple.c
src/: main.cpp  my_graphic.h  my_renderer.cpp  my_renderer.h
src/SCG/: scg.c  scg.h  scg_ext.c  scg_ext.h
src/my_obj_loader/: my_obj_loader.c  my_obj_loader.cpp  my_obj_loader.h
src/my_simple_model/: my_simple_model_loader.cpp
test/: CMakeLists.txt  my_renderer_test.cpp
